syntax = "proto3";
package address;

service Address {
  // example: ethereum address
  rpc GetNativeAddress (GetNativeAddressRequest) returns (GetNativeAddressResponse);
  rpc GetHoprAddress (GetHoprAddressRequest) returns (GetHoprAddressResponse);
}

message GetNativeAddressRequest {}

message GetNativeAddressResponse {
  string address = 1;
}

message GetHoprAddressRequest {}

message GetHoprAddressResponse {
  string address = 1;
}
