syntax = "proto3";
package withdraw;

service Withdraw {
  rpc WithdrawNative (WithdrawNativeRequest) returns (WithdrawNativeResponse);
  rpc WithdrawHopr (WithdrawHoprRequest) returns (WithdrawHoprResponse);
}

message WithdrawNativeRequest {
  string recipient = 1;
  string amount = 2;
}

message WithdrawNativeResponse {}

message WithdrawHoprRequest {
  string recipient = 1;
  string amount = 2;
}

message WithdrawHoprResponse {}
